# IsingModel

./: CMakeLists.txt  IsingCPU.cpp  IsingClassic.cpp  IsingGPU.cu  README.md  RENORM_HW.cu  Table.hh
